--- a/Natours/starter/css/style.css
+++ b/Natours/starter/css/style.css
@@ -105,6 +105,17 @@ body {
   }
 }
 
+@keyframes moveInBottom {
+  0% {
+    opacity: 0;
+    transform: translateY(40px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
 .btn:link, .btn:visited {
   text-transform: uppercase;
   text-decoration: none;
@@ -128,7 +139,6 @@ body {
 .btn-white {
   background-color: #fff;
   color: #777777;
-  ;
 }
 
 .btn::after {
@@ -151,4 +161,9 @@ body {
 .btn:hover::after {
   transform: scaleX(1.4) scaleY(1.6);
   opacity: 0;
+}
+
+.btn-animated {
+  animation: moveInBottom .5s ease-out .75s;
+  animation-fill-mode: backwards;
 }
