--- a/Nexter/starter/css/style.css
+++ b/Nexter/starter/css/style.css
@@ -113,11 +113,10 @@ body {
 .story__content {
   background-color: #f9f7f6;
   grid-column: col-start 5 / full-end;
-  padding: 6rem 12rem;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: flex-start; }
+  padding: 6rem 8vw;
+  display: grid;
+  align-content: center;
+  justify-items: start; }
 
 .story__text {
   font-size: 1.5rem;
