--- a/Nexter/starter/sass/_story.scss
+++ b/Nexter/starter/sass/_story.scss
@@ -8,11 +8,15 @@
     background-color: $color-grey-light-1;
     grid-column: col-start 5 / full-end;
 
-    padding: 6rem 12rem;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-start;
+    padding: 6rem 8vw;
+
+    // display: flex;
+    // flex-direction: column;
+    // justify-content: center;
+    // align-items: flex-start;
+    display: grid;
+    align-content: center;
+    justify-items: start;
   }
 
   &__text {
