--- a/Nexter/starter/css/style.css
+++ b/Nexter/starter/css/style.css
@@ -149,9 +149,14 @@ body {
   grid-gap: 7rem; }
 
 .home {
-  background-color: #f9f7f6; }
+  background-color: #f9f7f6;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr); }
   .home__img {
-    width: 100%; }
+    width: 100%;
+    grid-column: 1/-1; }
+  .home__name {
+    grid-column: 1/-1; }
   .home__location svg, .home__rooms svg, .home__area svg, .home__price svg {
     fill: #c69963;
     height: 2rem;
